Rectify Music logo alignment issue in Mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -2444,7 +2444,11 @@ div.show-more-arrangements img:hover {
   body#home-page .section-heading p {
     font-size: 15px;
   }
+  .content-heading {
+    font-size: 23px !important;
+  }
 }
+
 
 #fh5co-timeline .biography p {
   color: rgb(255 255 255 / 0.5);
